src/test/deca/context/invalid/op_arith_bool.deca
// Description :
// test d'une opération arithmétique sur des booléens
//
// Résultats :
// Erreur contextuelle
// Ligne 9 : Opération arithmétique entre des objets de type boolean et boolean impossible (règle 3.37)

{
  true + false;
}
